tests/rosetta/out/Smalltalk/deal-cards-for-freecell.out
/tmp/deal-cards-for-freecell.st:10: parse error, expected ']'
