tests/rosetta/out/Smalltalk/deal-cards-for-freecell.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| seed rnd deal deck i j tmp suits nums show c |
seed := 1.
rnd := [ seed := (((((seed * 214013)) + 2531011)) % 2147483648).
(seed / 65536). ].
deal := [:game | seed := game.
deck := {}.
i := 0.
[(i < 52)] whileTrue: [.
deck := deck copyWith: (51 - i).
i := (i + 1).
].
.
i := 0.
[(i < 51)] whileTrue: [.
j := (51 - (((rnd value) % ((52 - i))))).
tmp := deck at: i.
deck at: i put: deck at: j.
deck at: j put: tmp.
i := (i + 1).
].
.
deck. ].
suits := 'CDHS'.
nums := 'A23456789TJQK'.
show := [:cards | i := 0.
[(i < ((cards size)))] whileTrue: [.
c := cards at: i.
(stdout.write) value: (((((' ') + ((nums copyFrom: (c / 4) to: (((c / 4)) + 1))))) + ((suits copyFrom: (c % 4) to: (((c % 4)) + 1))))).
((((((((i + 1)) % 8)) = 0)) or: [((((i + 1)) = ((cards size))))])) ifTrue: [
Transcript show: ''; cr.
] .
i := (i + 1).
].
. ].
Transcript show: ''; cr.
Transcript show: 'Game #1'; cr.
show value: deal value: 1.
Transcript show: ''; cr.
Transcript show: 'Game #617'; cr.
show value: deal value: 617.
